# sonic

./: Cargo.toml  README.md
circuits/: Cargo.toml
circuits/src/: constraint_system.rs  gate.rs  lib.rs  matrix.rs  util.rs  vector.rs  witness.rs
circuits/tests/: group_conversion.rs  group_element_check.rs  serialization.rs
commitment/: Cargo.toml  raw.urs
commitment/src/: commitment.rs  urs.rs
commitment/tests/: batch.rs  single.rs  urs.rs
polynomials/: Cargo.toml
polynomials/src/: lib.rs  univariate.rs  utils.rs
polynomials/tests/: dft.rs  multiplication.rs
protocol/: Cargo.toml
protocol/src/: batch.rs  helper.rs  lib.rs  prover.rs  rndoracle.rs  zkproof.rs
protocol/tests/: group_conversion.rs  group_element_check.rs  performance.rs
