[package]
name = "commitment"
version = "0.1.0"
authors = ["IOHK"]
edition = "2018"

[dependencies.pairing]
version = "0.14.2"
features = ["u128-support"]

[dependencies]
polynomials = { path = "../polynomials" }
circuits = { path = "../circuits" }

merlin = "1.1.0"
rand = "0.4"
colored = "1.8"
byteorder = "1"
rayon = "1.3.0"
