[package]
name = "protocol"
version = "0.1.0"
authors = ["IOHK"]
edition = "2018"

[dependencies.pairing]
version = "0.14.2"
features = ["u128-support"]

[dependencies]
circuits = { path = "../circuits" }
polynomials = { path = "../polynomials" }
commitment = { path = "../commitment" }
merlin = "1.1.0"
rand = "0.4"
colored = "1.8"
sprs = "0.6.5"
rand_core = "0.5"
rayon = "1.3.0"
